--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-easyocr
+easyocr==1.7.1
 opencv-python-headless
 numpy
 streamlit
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 
