Update package versions in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-easyocr==1.7.1
+streamlit==1.32.0
+easyocr
 opencv-python-headless
 numpy
-streamlit
-torch==2.1.0+cpu
-torchvision==0.16.0+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
+Pillow
+
 
 
